--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,4 +1,6 @@
 
+@use './_reset';
+@use './_sidebar';
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 
@@ -19,4 +21,8 @@ $primary: #409eff;
 @mixin card {
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0,0,0,.06);
+}
+
+* {
+  color: var(--black);
 }
