--- a/src/assets/styles/_sidebar.scss
+++ b/src/assets/styles/_sidebar.scss
@@ -11,7 +11,7 @@
         margin-bottom: 18px;
     }
 
-    &__nav {
+    nav {
         margin-top: 20px;
 
         &-item {
@@ -21,6 +21,14 @@
         &-link {
             color: inherit;
             text-decoration: none;
+
+            .icon {
+
+                svg {
+                    display: block;
+                    fill: #020202 !important;
+                }
+            }
 
             span {
                 font-size: 12px;
