--- a/src/assets/styles/_sidebar.scss
+++ b/src/assets/styles/_sidebar.scss
@@ -14,24 +14,27 @@
     nav {
         margin-top: 20px;
 
-        &-item {
-            padding: 8px 0;
-        }
-
-        &-link {
-            color: inherit;
-            text-decoration: none;
+        .nav-link {
+            display: flex;
+            align-items: center;
+            padding: 5px 0;
 
             .icon {
-
-                svg {
-                    display: block;
-                    fill: #020202 !important;
-                }
+                fill: var(--black);
+                margin-right: 5px;
             }
 
             span {
-                font-size: 12px;
+                font-size: 14px;
+            }
+
+            &:hover {
+                .icon {
+                    fill: var(--blue);
+                }
+                span {
+                    color: var(--blue);
+                }
             }
         }
     }
