--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -5,6 +5,19 @@
     --light-black: #4A4A4A;
     --blue: #409EFF;
     --white: #ffffff;
-    --green: #0ECC21;
     --red: #F10707;
+    
+    // Цвета для таблиц
+    --table-text: #606266;
+    --table-row-bg: #DDE7EB;
+    --table-border: #E5E7EB;
+    --table-header-bg: #F5F7FA;
+    
+    // Дополнительные цвета
+    --grey-text: #6B7280;
+    --dark-grey: #111827;
+    --grey-border: #E5E7EB;
+    --grey-table-text: #606266;
+    --grey-bg: #F3F4F6;
+    --tabs-inactive: #A8ABB2;
 }
