--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -62,3 +62,28 @@ main {
     }
   }
 }
+
+.el-popover.el-popper.is-light.el-tooltip {
+  width: 350px !important;
+
+  .el-popconfirm__main {
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    gap: 2px;
+  }
+
+  .el-popconfirm__action {
+    .el-button {
+      & span {
+        color: var(--white);
+      }
+    }
+
+    .is-text {
+      & span {
+        color: var(--blue);
+      }
+    }
+  }
+}
