--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -12,6 +12,7 @@
     --table-row-bg: #DDE7EB;
     --table-border: #E5E7EB;
     --table-header-bg: #F5F7FA;
+    --table-price: #3B3B3B;
     
     // Дополнительные цвета
     --grey-text: #6B7280;
@@ -20,4 +21,5 @@
     --grey-table-text: #606266;
     --grey-bg: #F3F4F6;
     --tabs-inactive: #A8ABB2;
+    --green-success: #67C23A;
 }
